--- a/demos/explainer/lime_tabular_explainer.ipynb
+++ b/demos/explainer/lime_tabular_explainer.ipynb
@@ -134,6 +134,7 @@
     "* training_data (np.ndarray): 2d Numpy array representing the training data\n",
     "    (or some representative subset) (**required**)\n",
     "* mode (str): Whether the problem is 'classification' or 'regression' (**required**)\n",
+    "* predict_fn (function): A function that wraps the target model's prediction function - it takes in a 1D numpy array and outputs a vector of probabilities which should sum to 1 (**required**) \n",
     "\n",
     "\n",
     "Here are some other optional parameters:\n",
@@ -155,7 +156,9 @@
     "    in perturbed samples from a normal centered at the instance\n",
     "    being explained. Otherwise, the normal is centered on the mean\n",
     "    of the feature data.\n",
-    "* random_state (int): The random seed to generate random numbers during training\n"
+    "* random_state (int): The random seed to generate random numbers during training\n",
+    "\n",
+    "In this particular example, we pass the `RandomForestClassifier`'s `predict_proba` function to `predict_fn` and get explanations for the two classes."
    ]
   },
   {
@@ -168,6 +171,7 @@
     "    training_data=X_train,\n",
     "    training_labels=y_train,\n",
     "    mode='classification',\n",
+    "    predict_fn=clf.predict_proba,\n",
     "    column_names=raw_data['feature_names'],\n",
     "    class_names=list(raw_data['target_names'])\n",
     ")"
@@ -180,7 +184,6 @@
     "### Step 5: Generate some explanations\n",
     "\n",
     "Once we build the explainer, we can start generating some explanations via the `explain_instance` method. The `LimeTabularExplainer` expects several things, like:\n",
-    "* predict_fn (function): A function that wraps the target model's prediction function - it takes in a 1D numpy array and outputs a vector of probabilities which should sum to 1 (**required**) \n",
     "* instance (np.ndarray): A 1D numpy array corresponding to a row/single example (**required**)\n",
     "\n",
     "You can also pass the following:\n",
@@ -193,8 +196,7 @@
     "* distance_metric (str): The distance metric to use for weighting the loss function\n",
     "\n",
     "\n",
-    "In this particular example, we pass the `RandomForestClassifier`'s `predict_proba` function to `predict_fn` and get explanations for the two classes. We restrict explanations to 10 features (meaning only 10 features will have scores attached to them).\n",
-    "The output of `explain_instance` is a dictionary that maps each class to two things - the confidence of model and a list of explanations."
+    "We restrict explanations to 10 features (meaning only 10 features will have scores attached to them). The output of `explain_instance` is a dictionary that maps each class to two things - the confidence of model and a list of explanations."
    ]
   },
   {
@@ -253,9 +255,8 @@
    ],
    "source": [
     "exp = explainer.explain_instance(\n",
-    "    predict_fn=clf.predict_proba,\n",
-    "    top_labels=2,\n",
     "    instance=X_test[0],\n",
+    "    top_labels=2,\n",
     "    num_features=10)\n",
     "\n",
     "pprint(exp)"
@@ -342,20 +343,12 @@
     "new_explainer.load_explainer('artefacts/lime_tabular.pkl')\n",
     "\n",
     "exp = new_explainer.explain_instance(\n",
-    "    predict_fn=clf.predict_proba,\n",
-    "    top_labels=2,\n",
     "    instance=X_test[0],\n",
+    "    top_labels=2,\n",
     "    num_features=10)\n",
     "\n",
     "pprint(exp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
