--- a/demos/explainer/lime_text_explainer.ipynb
+++ b/demos/explainer/lime_text_explainer.ipynb
@@ -145,7 +145,7 @@
    "source": [
     "### Step 4: Build the explainer\n",
     "\n",
-    "This initializes the underlying explainer object."
+    "This initializes the underlying explainer object. We provide the `explain_instance` method below with the raw text - LIME's text explainer algorithm will conduct its own preprocessing in order to generate interpretable representations of the data. Hence we must define a custom `predict_fn` which takes a raw piece of text, vectorizes it via a pre-trained TF-IDF vectorizer, and passes the vector into the trained Naive Bayes model to generate class probabilities. LIME uses `predict_fn` to query our Naive Bayes model in order to learn its behavior around the provided data instance."
    ]
   },
   {
@@ -154,16 +154,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explainer.build_explainer()"
+    "def predict_fn(instance):\n",
+    "    vec = vectorizer.transform(instance)\n",
+    "    return clf.predict_proba(vec)\n",
+    "\n",
+    "\n",
+    "explainer.build_explainer(predict_fn)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 5: Generate some explanations\n",
-    "\n",
-    "We provide the `explain_instance` method with the raw text - LIME's text explainer algorithm will conduct its own preprocessing in order to generate interpretable representations of the data. Hence we must define a custom `predict_fn` which takes a raw piece of text, vectorizes it via a pre-trained TF-IDF vectorizer, and passes the vector into the trained Naive Bayes model to generate class probabilities. LIME uses `predict_fn` to query our Naive Bayes model in order to learn its behavior around the provided data instance."
+    "### Step 5: Generate some explanations"
    ]
   },
   {
@@ -221,12 +224,7 @@
     }
    ],
    "source": [
-    "def predict_fn(instance):\n",
-    "    vec = vectorizer.transform(instance)\n",
-    "    return clf.predict_proba(vec)\n",
-    "\n",
     "exp = explainer.explain_instance(\n",
-    "    predict_fn=predict_fn,\n",
     "    labels=[0, 1, 2],\n",
     "    instance=raw_test.data[0],\n",
     "    num_features=10\n",
@@ -276,9 +274,8 @@
    ],
    "source": [
     "exp = explainer.explain_instance(\n",
-    "    predict_fn=predict_fn,\n",
-    "    labels=[0, 1, 2],\n",
     "    instance=raw_test.data[7],\n",
+    "    labels=[0, 1, 2],\n",
     "    num_features=5\n",
     ")\n",
     "\n",
@@ -319,9 +316,8 @@
    ],
    "source": [
     "exp = explainer.explain_instance(\n",
-    "    predict_fn=predict_fn,\n",
-    "    labels=[0, 1, 2],\n",
     "    instance=raw_test.data[9],\n",
+    "    labels=[0, 1, 2],\n",
     "    num_features=5\n",
     ")\n",
     "\n",
@@ -387,9 +383,8 @@
     "new_explainer.load_explainer('artefacts/lime_text.pkl')\n",
     "\n",
     "exp = new_explainer.explain_instance(\n",
-    "    predict_fn=predict_fn,\n",
-    "    labels=[0, 1, 2],\n",
     "    instance=raw_test.data[9],\n",
+    "    labels=[0, 1, 2],\n",
     "    num_features=5\n",
     ")\n",
     "\n",
