Refactored mode and updated README

--- a/tutorials/explainer/lime_tabular_explainer.ipynb
+++ b/tutorials/explainer/lime_tabular_explainer.ipynb
@@ -170,7 +170,7 @@
     "explainer.build_explainer(\n",
     "    training_data=X_train,\n",
     "    training_labels=y_train,\n",
-    "    mode='classification',\n",
+    "    mode=xai.MODE.CLASSIFICATION,\n",
     "    predict_fn=clf.predict_proba,\n",
     "    column_names=raw_data['feature_names'],\n",
     "    class_names=list(raw_data['target_names'])\n",
@@ -210,46 +210,26 @@
      "text": [
       "{0: {'confidence': 0.0,\n",
       "     'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
-      "                      'score': -0.10275161028167702},\n",
+      "                      'score': -0.10193695487658752},\n",
       "                     {'feature': 'worst area <= 509.25',\n",
-      "                      'score': -0.09479442043867894},\n",
+      "                      'score': -0.09601666088375639},\n",
       "                     {'feature': 'worst radius <= 12.93',\n",
-      "                      'score': -0.060148145614287524},\n",
-      "                     {'feature': 'worst texture <= 21.41',\n",
-      "                      'score': -0.057578312942073995},\n",
+      "                      'score': -0.06025582708518221},\n",
       "                     {'feature': 'mean area <= 419.25',\n",
-      "                      'score': -0.05598211138713413},\n",
-      "                     {'feature': 'worst concave points <= 0.06',\n",
-      "                      'score': -0.05063258480760927},\n",
-      "                     {'feature': 'mean texture <= 16.34',\n",
-      "                      'score': -0.042193966171229905},\n",
-      "                     {'feature': 'mean concavity <= 0.03',\n",
-      "                      'score': -0.028153608385264327},\n",
-      "                     {'feature': 'area error <= 18.17',\n",
-      "                      'score': -0.027911303586217028},\n",
-      "                     {'feature': 'worst compactness <= 0.15',\n",
-      "                      'score': -0.024483076857988333}]},\n",
+      "                      'score': -0.056302517885391166},\n",
+      "                     {'feature': 'worst texture <= 21.41',\n",
+      "                      'score': -0.05509499962470648}]},\n",
       " 1: {'confidence': 1.0,\n",
       "     'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
-      "                      'score': 0.10275161028167702},\n",
+      "                      'score': 0.10193695487658752},\n",
       "                     {'feature': 'worst area <= 509.25',\n",
-      "                      'score': 0.09479442043867897},\n",
+      "                      'score': 0.0960166608837564},\n",
       "                     {'feature': 'worst radius <= 12.93',\n",
-      "                      'score': 0.06014814561428753},\n",
-      "                     {'feature': 'worst texture <= 21.41',\n",
-      "                      'score': 0.057578312942073995},\n",
+      "                      'score': 0.06025582708518222},\n",
       "                     {'feature': 'mean area <= 419.25',\n",
-      "                      'score': 0.05598211138713414},\n",
-      "                     {'feature': 'worst concave points <= 0.06',\n",
-      "                      'score': 0.05063258480760927},\n",
-      "                     {'feature': 'mean texture <= 16.34',\n",
-      "                      'score': 0.0421939661712299},\n",
-      "                     {'feature': 'mean concavity <= 0.03',\n",
-      "                      'score': 0.028153608385264303},\n",
-      "                     {'feature': 'area error <= 18.17',\n",
-      "                      'score': 0.027911303586217028},\n",
-      "                     {'feature': 'worst compactness <= 0.15',\n",
-      "                      'score': 0.024483076857988346}]}}\n"
+      "                      'score': 0.05630251788539119},\n",
+      "                     {'feature': 'worst texture <= 21.41',\n",
+      "                      'score': 0.05509499962470641}]}}\n"
      ]
     }
    ],
@@ -257,7 +237,7 @@
     "exp = explainer.explain_instance(\n",
     "    instance=X_test[0],\n",
     "    top_labels=2,\n",
-    "    num_features=10)\n",
+    "    num_features=5)\n",
     "\n",
     "pprint(exp)"
    ]
@@ -293,46 +273,26 @@
      "text": [
       "{0: {'confidence': 0.0,\n",
       "     'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
-      "                      'score': -0.0988888637468886},\n",
+      "                      'score': -0.09985606175737251},\n",
       "                     {'feature': 'worst area <= 509.25',\n",
-      "                      'score': -0.08697607214733627},\n",
+      "                      'score': -0.08623375147255567},\n",
       "                     {'feature': 'mean area <= 419.25',\n",
-      "                      'score': -0.07593313480546983},\n",
+      "                      'score': -0.07671371631709668},\n",
       "                     {'feature': 'worst radius <= 12.93',\n",
-      "                      'score': -0.06743098333423715},\n",
+      "                      'score': -0.06861610584095608},\n",
       "                     {'feature': 'worst texture <= 21.41',\n",
-      "                      'score': -0.05073096916988603},\n",
-      "                     {'feature': 'mean texture <= 16.34',\n",
-      "                      'score': -0.03796017799565063},\n",
-      "                     {'feature': 'worst concave points <= 0.06',\n",
-      "                      'score': -0.035642798244049576},\n",
-      "                     {'feature': 'area error <= 18.17',\n",
-      "                      'score': -0.02973519533368258},\n",
-      "                     {'feature': '0.12 < worst smoothness <= 0.13',\n",
-      "                      'score': -0.027025385756363693},\n",
-      "                     {'feature': 'worst concavity <= 0.11',\n",
-      "                      'score': -0.019772658434194377}]},\n",
+      "                      'score': -0.05078617133441289}]},\n",
       " 1: {'confidence': 1.0,\n",
       "     'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
-      "                      'score': 0.0988888637468886},\n",
+      "                      'score': 0.09985606175737251},\n",
       "                     {'feature': 'worst area <= 509.25',\n",
-      "                      'score': 0.08697607214733628},\n",
+      "                      'score': 0.08623375147255567},\n",
       "                     {'feature': 'mean area <= 419.25',\n",
-      "                      'score': 0.07593313480546983},\n",
+      "                      'score': 0.0767137163170967},\n",
       "                     {'feature': 'worst radius <= 12.93',\n",
-      "                      'score': 0.06743098333423717},\n",
+      "                      'score': 0.0686161058409561},\n",
       "                     {'feature': 'worst texture <= 21.41',\n",
-      "                      'score': 0.05073096916988604},\n",
-      "                     {'feature': 'mean texture <= 16.34',\n",
-      "                      'score': 0.037960177995650615},\n",
-      "                     {'feature': 'worst concave points <= 0.06',\n",
-      "                      'score': 0.03564279824404958},\n",
-      "                     {'feature': 'area error <= 18.17',\n",
-      "                      'score': 0.029735195333682587},\n",
-      "                     {'feature': '0.12 < worst smoothness <= 0.13',\n",
-      "                      'score': 0.027025385756363676},\n",
-      "                     {'feature': 'worst concavity <= 0.11',\n",
-      "                      'score': 0.01977265843419438}]}}\n"
+      "                      'score': 0.05078617133441288}]}}\n"
      ]
     }
    ],
@@ -345,7 +305,7 @@
     "exp = new_explainer.explain_instance(\n",
     "    instance=X_test[0],\n",
     "    top_labels=2,\n",
-    "    num_features=10)\n",
+    "    num_features=5)\n",
     "\n",
     "pprint(exp)"
    ]
